--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap");
 
 :root {
-  --primary-color: #1A345C;
+  --primary-color: #385ed6;
   --text-on-primary-color: #fff;
   --secondary-color: #fdbf74;
   --text-on-secondary-color: #7a4300;
